# robotGuiDebug

./: CMakeLists.txt  package.xml  readme.md
include/robot_gui_debug/: Parameter.h
msg/: ParameterAdjustMsg.msg
nodes/: main.cpp
res/: gui_debug_host.ini  gui_debug_robot.yaml  save.txt
scripts/: host.py
src/: Parameter.cpp
srv/: ParameterShow.srv
